[gd_scene load_steps=42 format=2]

[ext_resource path="res://Multimedia/Personajes/Alex_phone_16x16.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Jugador.gd" type="Script" id=2]
[ext_resource path="res://Multimedia/Botones/G.png" type="Texture" id=4]
[ext_resource path="res://Scripts/G-key.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11, 10.25 )

[sub_resource type="StreamTexture" id=73]
load_path = "res://.import/Alex_run_16x16.png-12c1bb492f470cedea3bdd446cc16233.stex"

[sub_resource type="AtlasTexture" id=66]
atlas = SubResource( 73 )
region = Rect2( 288, 8, 16, 24 )

[sub_resource type="AtlasTexture" id=67]
atlas = SubResource( 73 )
region = Rect2( 304, 8, 16, 24 )

[sub_resource type="AtlasTexture" id=68]
atlas = SubResource( 73 )
region = Rect2( 320, 8, 16, 24 )

[sub_resource type="AtlasTexture" id=69]
atlas = SubResource( 73 )
region = Rect2( 336, 8, 16, 24 )

[sub_resource type="AtlasTexture" id=70]
atlas = SubResource( 73 )
region = Rect2( 352, 8, 16, 24 )

[sub_resource type="AtlasTexture" id=71]
atlas = SubResource( 73 )
region = Rect2( 368, 8, 16, 24 )

[sub_resource type="AtlasTexture" id=60]
atlas = SubResource( 73 )
region = Rect2( 192, 8, 16, 24 )

[sub_resource type="AtlasTexture" id=61]
atlas = SubResource( 73 )
region = Rect2( 208, 8, 16, 24 )

[sub_resource type="AtlasTexture" id=62]
atlas = SubResource( 73 )
region = Rect2( 224, 8, 16, 24 )

[sub_resource type="AtlasTexture" id=63]
atlas = SubResource( 73 )
region = Rect2( 240, 8, 16, 24 )

[sub_resource type="AtlasTexture" id=64]
atlas = SubResource( 73 )
region = Rect2( 256, 8, 16, 24 )

[sub_resource type="AtlasTexture" id=65]
atlas = SubResource( 73 )
region = Rect2( 272, 8, 16, 24 )

[sub_resource type="AtlasTexture" id=54]
atlas = SubResource( 73 )
region = Rect2( 0, 8, 16, 24 )

[sub_resource type="AtlasTexture" id=55]
atlas = SubResource( 73 )
region = Rect2( 16, 8, 16, 24 )

[sub_resource type="AtlasTexture" id=56]
atlas = SubResource( 73 )
region = Rect2( 32, 8, 16, 24 )

[sub_resource type="AtlasTexture" id=57]
atlas = SubResource( 73 )
region = Rect2( 48, 8, 16, 24 )

[sub_resource type="AtlasTexture" id=58]
atlas = SubResource( 73 )
region = Rect2( 64, 8, 16, 24 )

[sub_resource type="AtlasTexture" id=59]
atlas = SubResource( 73 )
region = Rect2( 80, 8, 16, 24 )

[sub_resource type="AtlasTexture" id=48]
atlas = SubResource( 73 )
region = Rect2( 96, 8, 16, 24 )

[sub_resource type="AtlasTexture" id=49]
atlas = SubResource( 73 )
region = Rect2( 112, 8, 16, 24 )

[sub_resource type="AtlasTexture" id=50]
atlas = SubResource( 73 )
region = Rect2( 128, 8, 16, 24 )

[sub_resource type="AtlasTexture" id=51]
atlas = SubResource( 73 )
region = Rect2( 144, 8, 16, 24 )

[sub_resource type="AtlasTexture" id=52]
atlas = SubResource( 73 )
region = Rect2( 160, 8, 16, 24 )

[sub_resource type="AtlasTexture" id=53]
atlas = SubResource( 73 )
region = Rect2( 176, 8, 16, 24 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 0, 9, 16, 23 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 32, 9, 16, 23 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 48, 9, 16, 23 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 64, 9, 16, 23 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 80, 9, 16, 23 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 96, 9, 16, 23 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 112, 9, 16, 23 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 1 )
region = Rect2( 128, 9, 16, 23 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ) ],
"loop": true,
"name": "down",
"speed": 8.0
}, {
"frames": [ SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": true,
"name": "left",
"speed": 8.0
}, {
"frames": [ SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ) ],
"loop": true,
"name": "right",
"speed": 8.0
}, {
"frames": [ SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ) ],
"loop": true,
"name": "up",
"speed": 8.0
}, {
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": true,
"name": "wining",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 11.0

[sub_resource type="CircleShape2D" id=72]
radius = 10.6667

[node name="Player" type="KinematicBody2D"]
position = Vector2( 580, 320 )
scale = Vector2( 3, 3 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.25 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "wining"
frame = 2
playing = true

[node name="player" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
shape = SubResource( 2 )

[node name="G-key" type="Sprite" parent="."]
position = Vector2( 0, -19 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )
script = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 72 )

[connection signal="player_g" from="." to="." method="_on_Player_player_g"]
[connection signal="area_entered" from="player" to="." method="_on_player_area_entered"]
[connection signal="area_exited" from="player" to="." method="_on_player_area_exited"]
